--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#" title="Serviços" aria-label="Serviços">Serviços</a></li>
             <li><a href="#" title="Clientes" aria-label="Clientes">Clientes</a></li>
             <li><a href="#" title="Contato" aria-label="Contato" class="link-btn">Contato</a></li>
-            <!--<li><a href="#" title="Menu" aria-label="Menu" class="link-btn menu">☰</a></li>-->
+            <li><a href="#" title="Menu" aria-label="Menu" class="link-btn menu">☰</a></li>
         </ul>
     </nav>
 
@@ -44,7 +44,7 @@
         <header>
             <div class="page-banner">
                 <picture>
-                    <img src="img/bannerJPG2.jpg" alt="Banner Ten Tips to Help Your College Club Bloom on Discord" loading="lazy" decoding="async">
+                    <img src="img/bannerJPG.jpg" alt="Banner Ten Tips to Help Your College Club Bloom on Discord" loading="lazy" decoding="async">
                 </picture>
             <!--
             <video no-controls loop muted autoplay>
@@ -89,13 +89,17 @@
             
             <ul class="lista">
                 <li data-selectable-paragraph="">
+                    <span>🟂</span><br>
                     <strong class="kj ja">Broadcast: </strong><br>Going somewhere with no signal? Set yourself up with whatever unlikely animal friendship compilation or deep dives into the history of beach towels you need.</li>
                 <li data-selectable-paragraph="">
+                    <span>🟆</span><br>
                     <strong class="kj ja">Comercial: </strong><br>When you’re crunching hard, listening to your favorite endless lo-fi background music, the last thing you need is an interruption. YouTube Premium lets you skip the ads and stay in
                     the groove.</li>
                 <li data-selectable-paragraph="">
+                    <span>🟊</span><br>
                     <strong class="kj ja">Tv: </strong><br>Want to save a little battery, listen to a vid with the screen off? Or play a puzzle game with a song in the background? Premium’s got you covered.</li>
                 <li data-selectable-paragraph="">
+                    <span>🟌</span><br>
                     <strong class="kj ja">Cinema: </strong><br>Just about any song you can think of, any time, no ads. YouTube
                     Music has it all — official singles, albums, playlists, remixes, music videos, live performances, covers, and hard-to-find music you can’t get anywhere else.</li>
             </ul>
